<resources>
    <string name="app_name" translatable="false">Selmeem</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="email">Email</string>
    <string name="iniciar_sessio">Iniciar Sessio</string>
    <string name="registrarse">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nom">Nom</string>
    <string name="confirmar_contrasenya">Confirmar Contrasenya</string>
    <string name="Nom">Nom</string>
    <string name="edat">Edat</string>
    <string name="recuperar_contrasenya">Recuperar Contrasenya</string>
    <string name="cancelar">Cancelar</string>
    <string name="novetats">Novetats</string>
    <string name="populars">Populars</string>
    <string name="perfil">Perfil</string>
    <string name="nova_publicacio">Nova Publicacio</string>
    <string name="penjar_imatge">Penjar Imatge</string>
    <string name="publicar">Publicar</string>
    <string name="editar_publicacio">Editar Publicacio</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="todo">TOT</string>
    <string name="encara_no_tens_compte">Encara no tens compte?</string>
    <string name="crear_compte">Crear Compte</string>
    <string name="nom_usuari">Nom Usuari</string>
    <string name="publicacions">Publicacions</string>
    <string name="de">De:</string>
    <string name="open_drawer" translatable="false">Abrir menú</string>
    <string name="close_drawer" translatable="false">Tancar menú</string>
    <string name="favorits">Favorits</string>
    <string name="Likes">Has rebut un Like!</string>
    <string name="DescripcioNoti">Un usuari ha donat like al teu post!</string>
    <string name="AvisPolitiques">Al registrarse en Selmeem confirmes que has llegit y aceptes les polítiques de privacitat. En cas de no haber lleít les polítiques et facilitem l\'acces.</string>
    <string name="errorContrasenyes">Les contrasenyes no hi coincideixen</string>
    <string name="errorCampsBuits">No hi pot haver camps buits</string>
    <string name="noAceptar">No aceptar</string>
    <string name="llegirPolitiques">Llegir polítiques</string>
    <string name="titolImatgeObligatoris">El titol i la imatge son obligatoris.</string>
    <string name="errorrPujarImatge">Error en pujar la imatge</string>
    <string name="errorCorreo">Error amb el correo</string>
    <string name="errorActualitzarPublicacions">Error al actualitzar publicacions</string>
    <string name="errorAlCrearPublicacio">Error al crear publicacio</string>
    <string name="inici">Inici</string>
    <string name="nova_publicaio">Nova Publicaio</string>
    <string name="tancar_sessio">Tancar Sessio</string>
    <string name="editarBoto">✎</string>


</resources>