<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:backgroundTint="#F0F0F0"
    tools:context=".Register">

    <View
        android:id="@+id/cardViewTop"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@drawable/border_radius_lila"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/cardViewSh"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#8300FF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="#F0F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInici"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_gravity="center|top"


        android:layout_marginStart="50dp"

        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edNom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"

                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:background="@color/grisClar"
                android:ems="10"
                android:hint="@string/Nom"

                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edPassw"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"


                android:layout_marginEnd="20dp"
                android:background="@color/grisClar"
                android:ems="10"
                android:hint="@string/contrasenya"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/edPassw2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edNom"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnIniciarSessio"
                style="@style/Theme.BotoIniciRegister"

                android:layout_marginStart="20dp"

                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border_radius_lila"
                android:text="@string/registrarse"
                app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edEdat" />

            <EditText
                android:id="@+id/edEmail2"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"

                android:layout_marginEnd="20dp"
                android:background="@color/grisClar"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/btnIniciarSessio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edPassw2"
                app:layout_constraintVertical_bias="0.0"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edPassw2"
                android:layout_width="match_parent"
                android:layout_height="50dp"


                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:background="@color/grisClar"
                android:ems="10"
                android:hint="@string/confirmar_contrasenya"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/edEmail2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edPassw"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnCancelar"
                style="@style/Theme.BotoIniciRegister"

                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_radius_lila"
                android:text="@string/cancelar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnIniciarSessio" />

            <EditText
                android:id="@+id/edEdat"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grisClar"
                android:ems="10"
                android:hint="@string/edat"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/btnIniciarSessio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edEmail2"
                app:layout_constraintVertical_bias="0.0"
                android:autofillHints="" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        style="@style/Theme.titols"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"


        android:layout_marginBottom="25dp"
        android:text="@string/crear_compte"
        app:layout_constraintBottom_toTopOf="@+id/cardViewInici"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardViewSh" />

</androidx.constraintlayout.widget.ConstraintLayout>